--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <h1>choisissez la version du site que vous voulez voir</h1>
         <div class="div-choice">
             <div>
-                <a target="_blank" href="original/index.html" class="btn-main btn-old">Version originale</a>
+                <a target="_blank" href="original/index.html" class="btn-all btn-origin">Version originale</a>
             </div>
             <div>
-                <a target="_blank" href="update/index.html" class="btn-main btn-new">Version optimisée</a>
+                <a target="_blank" href="update/index.html" class="btn-all btn-update">Version optimisée</a>
             </div>
         </div>
     </section>
