modification all container

--- a/update/index.html
+++ b/update/index.html
@@ -2,13 +2,14 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="La Chouette agence, une agence de webdesign basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet en définissant une stratégie et un design à votre image.">
+    <meta name="description" content="La Chouette agence, une agence de webdesign basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.update.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+    <link rel="canonical" href="https://salma581.github.io/p4_mouhoub_salma/">
 
     <title>La Chouette agence - Accueil</title>
 </head>
@@ -52,7 +53,7 @@
         <div class="container bloc-lg">
             <div class="row tight-width-whitespace">
                 <div class="col-sm-12">
-                    <img src="img/logo.png" class="center-block image-resize-mode" alt="Logo de la Chouette agence" />
+                    <img src="img/logo.png" class="center-block image-resize-mode" alt="Logo de la Chouette agence" style="width:20%;" />
                     <h1 class="text-center hero-bloc-text tc-white ">
                         La Chouette agence <br> Agence de webdesign à Lyon
                     </h1>
@@ -83,7 +84,7 @@
                     <h2 class="mg-md text-center">
                         Web design
                     </h2>
-                    <p class="text-center ">
+                    <p class="text-left ">
                         Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
                     </p>
                 </div>
@@ -95,7 +96,7 @@
                     <h2 class="mg-md text-center">
                         &nbsp;Stratégie
                     </h2>
-                    <p class="text-center ">
+                    <p class="text-left ">
                         Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
                     </p>
                 </div>
@@ -107,7 +108,7 @@
                     <h2 class="mg-md text-center">
                         Illustrations
                     </h2>
-                    <p class="text-center ">
+                    <p class="text-left ">
                         Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
                     </p>
                 </div>
@@ -131,10 +132,10 @@
         <div class="container bloc-lg">
             <div class="row tight-width-whitespace black-background">
                 <div class="col-sm-12">
-                    <h3 class="mg-md text-center tc-white">
+                    <h3 class="mg-md tc-white">
                         Nous souhaitons aider les entreprises de la région lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
                     </h3>
-                    <h4 class="text-center white">
+                    <h4 class=" white">
                         Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
                         <a class="btn btn-atomic-tangerine btn-rd btn-lg" href="page2.html" aria-label="Lien vers la page contact">Contactez notre équipe</a><br>
                     </h4>
@@ -155,7 +156,7 @@
                 </div>
             </div>
 
-            <div class="row tight-width-whitespace portfolio-row">
+            <div class="row portfolio-row width-space">
                 <div class="col-sm-6">
                     <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Refonte d'un site web pour un journal local" title="agrandir image refonte web" class="img-responsive portfolio-thumb" /></a>
                     <h3 class="mg-md text-center">
@@ -175,9 +176,9 @@
                         Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
                     </p>
                 </div>
-            </div>
+            </div>     
 
-            <div class="row tight-width-whitespace portfolio-row">
+            <div class="row  portfolio-row width-space">
                 <div class="col-sm-6">
                     <a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour voyageur" title="agrandir image creation site voyageur"/></a>
                     <h3 class="mg-md text-center">
