modification parti superieur

--- a/update/page2.html
+++ b/update/page2.html
@@ -76,7 +76,7 @@
                             <label for="name">
                                 Nom
                             </label>
-                            <input id="name" class="form-control" aria-required="true" aria-label="entrez votre nom" />
+                            <input id="name" class="form-control" aria-required="true" aria-label="entrez votre nom">
                         </div>
 
                         <div class="form-group">
