--- a/update/index.html
+++ b/update/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="La Chouette agence, une agence de webdesign basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet.">
+    <meta name="description" content="La Chouette agence, une agence de webdesign 
+    basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -67,15 +68,15 @@
     </section>
 
 
-    <!-- Section Services -->
+    <!-- Section-->
     <section class="bloc bgc-white l-bloc" id="bloc-2-services">
         <div class="container bloc-md">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h2 class="mg-md text-center">La Chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+                    <h2 class="mg-md text-center">La Chouette agence est une agence de web design qui aide les entreprises
+                         à devenir attractives et visibles sur Internet.</h2>
                 </div>
             </div>
-
             <div class="row voffset-lg med-width-whitespace">
                 <div class="col-sm-4">
                     <div class="text-center">
@@ -88,14 +89,11 @@
                         Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
                     </p>
                 </div>
-
                 <div class="col-sm-4">
                     <div class="text-center">
                         <span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                     </div>
-                    <h2 class="mg-md text-center">
-                        &nbsp;Stratégie
-                    </h2>
+                    <h2 class="mg-md text-center">Stratégie</h2>
                     <p class="text-left ">
                         Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
                     </p>
@@ -168,7 +166,8 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" title="agrandir image creation site web"/></a>
+                    <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+                        <img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" title="agrandir image creation site web"/></a>
                     <h3 class="mg-md text-center">
                         Création d'un site web pour photographes
                     </h3>
@@ -225,41 +224,26 @@
         <div class="container bloc-sm">
             <div class="row">
                 <div class="col-xs-12">
-                    <h3 class="text-center">
-                        La Chouette agence - Agence web basée à Lyon.
-                    </h3>
-
+                    <h3 class="text-center">La Chouette agence - Agence web basée à Lyon.</h3>
                     <div class="row row-no-gutters social">
-
                         <div class="col-xs-3">
                             <div class="text-center">
-                                <a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr">
-                                    <i class="fa fa-twitter icon-md"></i>
-                                </a>
+                                <a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr"> <i class="fa fa-twitter icon-md"></i></a>
                             </div>
                         </div>
-
                         <div class="col-xs-3">
                             <div class="text-center">
-                                <a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
-                                    <i class="fa fa-facebook icon-md"></i>
-                                </a>
+                                <a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/"><i class="fa fa-facebook icon-md"></i></a>
                             </div>
                         </div>
-
                         <div class="col-xs-3">
                             <div class="text-center">
-                                <a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/">
-                                    <i class="fa fa-dribbble icon-md"></i>
-                                </a>
+                                <a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/"><i class="fa fa-dribbble icon-md"></i></a>
                             </div>
                         </div>
-
-                        <div class="col-xs-3">
+                      <div class="col-xs-3">
                             <div class="text-center">
-                                <a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
-                                    <i class="fa fa-instagram icon-md"></i>
-                                </a>
+                                <a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr"><i class="fa fa-instagram icon-md"></i></a>
                             </div>
                         </div>
                     </div>
